--- a/examples.html
+++ b/examples.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" media="all" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" />
 		<link rel="stylesheet" type="text/css" media="all" href="daterangepicker.css" />
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-		<script type="text/javascript" src="date.js"></script>
+		<script type="text/javascript" src="moment.js"></script>
 		<script type="text/javascript" src="daterangepicker.js"></script>
 	</head>
 	<body>
@@ -54,20 +54,20 @@
 								ranges: {
 									'Today': ['today', 'today'],
 									'Yesterday': ['yesterday', 'yesterday'],
-									'Last 7 Days': [Date.today().add({ days: -6 }), 'today'],
-									'Last 30 Days': [Date.today().add({ days: -29 }), 'today'],
-									'This Month': [Date.today().moveToFirstDayOfMonth(), Date.today().moveToLastDayOfMonth()],
-									'Last Month': [Date.today().moveToFirstDayOfMonth().add({ months: -1 }), Date.today().moveToFirstDayOfMonth().add({ days: -1 })]
+									'Last 7 Days': [moment().subtract('days', 6), 'today'],
+									'Last 30 Days': [moment().subtract('days', 29), 'today'],
+									'This Month': [moment().startOf('month'), moment().add('months', 1).startOf('month')],
+									'Last Month': [moment().startOf('month').subtract('months',1), moment().startOf('month').subtract('days', 1)]
 								},
 								opens: 'left',
-								format: 'MM/dd/yyyy',
-								startDate: Date.today().add({ days: -29 }),
-								endDate: Date.today(),
+								format: 'MM/DD/YYYY',
+								startDate: moment().subtract('days', 29),
+								endDate: moment(),
 								minDate: '01/01/2012',
 								maxDate: '12/31/2013',
 						        	locale: {
 						            		applyLabel: 'Submit',
-						           		fromLabel: 'From',
+						           		  fromLabel: 'From',
 						            		toLabel: 'To',
 						            		customRangeLabel: 'Custom Range',
 						            		daysOfWeek: ['Su', 'Mo', 'Tu', 'We', 'Th', 'Fr','Sa'],
@@ -76,12 +76,12 @@
 						        	}
 							}, 
 							function(start, end) {
-								$('#reportrange span').html(start.toString('MMMM d, yyyy') + ' - ' + end.toString('MMMM d, yyyy'));
+								$('#reportrange span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
 							}
 						);
 
 						//Set the initial state of the picker label
-						$('#reportrange span').html(Date.today().add({ days: -29 }).toString('MMMM d, yyyy') + ' - ' + Date.today().toString('MMMM d, yyyy'));
+						$('#reportrange span').html(moment().subtract('days',29).format('MMMM D, YYYY') + ' - ' + moment().format('MMMM D, YYYY'));
 
 					});
 					</script>
